k8s-intro/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  selector:
    app: my-server
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
